--- a/configs/Base-RCNN-FPN-KINS.yaml
+++ b/configs/Base-RCNN-FPN-KINS.yaml
@@ -40,7 +40,7 @@ SOLVER:
   IMS_PER_BATCH: 1
   BASE_LR: 0.0025
   STEPS: (30000, 40000)
-  MAX_ITER: 160000
+  MAX_ITER: 1300000
   #OPT_TYPE: "SGD"
   CHECKPOINT_PERIOD: 8000
 TEST:
