--- a/configs/Base-RCNN-FPN-COCOA_cls.yaml
+++ b/configs/Base-RCNN-FPN-COCOA_cls.yaml
@@ -50,10 +50,13 @@ SOLVER:
   IMS_PER_BATCH: 2
   BASE_LR: 0.0005
   STEPS: (5000, 8000)
-  MAX_ITER: 10000
+  MAX_ITER: 1300000
+  #MAX_ITER: 10000
 DATASETS:
   TRAIN: ("cocoa_cls_train",)
   TEST: ("cocoa_cls_val",)
+TEST:
+  EVAL_PERIOD: 4000
 INPUT:
   MIN_SIZE_TRAIN: (640, 672, 704, 736, 768, 800)
   #MASK_FORMAT: "bitmask"
