--- a/configs/COCOA_cls-AmodalSeg/aisformer_R_50_FPN_1x_amodal_cocoa_cls.yaml
+++ b/configs/COCOA_cls-AmodalSeg/aisformer_R_50_FPN_1x_amodal_cocoa_cls.yaml
@@ -1,5 +1,5 @@
 _BASE_: "../Base-RCNN-FPN-COCOA_cls.yaml"
-OUTPUT_DIR: ../data/train_outputs/aisformer/aisformer_R_50_FPN_1x_amodal_cocoa_cls/
+OUTPUT_DIR: /work/weientai18/aisformer/full_training_cocoa/
 MODEL:
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
   MASK_ON: True
@@ -9,5 +9,5 @@ MODEL:
     NUM_CONV: 12
     POOLER_RESOLUTION: 14
     CUSTOM_NAME: AISFormer 
-SOLVER:
-  MAX_ITER: 20000
+#SOLVER:
+#  MAX_ITER: 20000
