add test with iou filter

--- a/configs/Base-RCNN-FPN-COCOA_cls.yaml
+++ b/configs/Base-RCNN-FPN-COCOA_cls.yaml
@@ -52,11 +52,12 @@ SOLVER:
   STEPS: (5000, 8000)
   MAX_ITER: 1300000
   #MAX_ITER: 10000
+  CHECKPOINT_PERIOD: 8000
 DATASETS:
   TRAIN: ("cocoa_cls_train",)
   TEST: ("cocoa_cls_val",)
 TEST:
-  EVAL_PERIOD: 4000
+  EVAL_PERIOD: 8000
 INPUT:
   MIN_SIZE_TRAIN: (640, 672, 704, 736, 768, 800)
   #MASK_FORMAT: "bitmask"
